@@ -3,11 +3,12 @@ author                          = Akzhan Abdulin <akzhan@cpan.org>
 author                          = Igor Mironov <grif@cpan.org>
 author                          = Victor Efimov <efimov@reg.ru>
 author                          = REG.RU LLC
+author                          = Kirill Sysoev <k.sysoev@me.com>
 license                         = MIT
 copyright_holder                = REG.RU LLC
 copyright_year                  = 2014
 
-version                         = 2.004
+version                         = 2.005
 
 [Prereqs]
 perl                            = 5.010001
