@@ -576,9 +576,12 @@ sub _process_list_items {
     my ( $r, $locale ) = @_;
 
     my @compiled_items;
-
     for my $item ( @{ $r } ) {
-        push @compiled_items, $compiler->compile( $parser->parse( $item, $locale ) );
+        if ( defined $item ) {
+            push @compiled_items, $compiler->compile( $parser->parse( $item, $locale ) );
+        } else {
+            push @compiled_items, $item;
+        }
     }
 
     return sub {
