@@ -10,5 +10,6 @@ simple:
     some:
         combine: 'I have  #{count} ((nail|nails)):count  for  #{single.test.deep} for #{test} ((test|tests)):test'
     list:
+      - ~
       - 'List Item 1: #{test}'
       - 'List Item 2: #{test}'
