@@ -9,6 +9,7 @@ simple:
     some:
         combine: 'У меня есть  #{count} ((гвоздь|гвоздя|гвоздей)):count  для #{single.test.deep} #{test} ((теста|тестов)):test'
     list:
+      - ~
       - 'Элемент списка 1: #{test}'
       - 'Элемент списка 2: #{test}'
 
